src/App.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

@import url("https://fonts.googleapis.com/css2?family=DynaPuff&family=Inconsolata:wght@400;800&family=Montserrat:wght@100;400&family=Nanum+Gothic:wght@700&family=Open+Sans:ital,wght@0,300;1,400&family=Roboto:wght@400;500&display=swap");

img {
  display: inline-block !important;
}
section {
  width: 100vw;
}

.home-content {
  background-color: black;
  color: white;
  font-family: inconsolata;
  display: grid;
  place-items: center;
}

.header-text {
  font-family: sans-serif;
  font-size: 1.75rem;
}

.nav-container {
  display: flex;
  justify-content: space-between;
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  min-height: 80px;
  padding: 0 25px;
  box-sizing: border-box;
  background-image: linear-gradient(
    90deg,
    #fdf7ff,
    #fff5fb,
    #fff4f2,
    #fff5e9,
    #fff8e4,
    #f9fae3,
    #f2fbe3,
    #e9fde6,
    #defbed,
    #d8f7f3,
    #d7f3f7,
    #daeef7
  );
  z-index: 100;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.nav-link-container {
  display: flex;
}

.nav-link {
  padding: 10px;
  list-style: none;
  cursor: pointer;
}

.nav-link:hover {
  color: hotpink;
}

.header-class {
  font-size: 2rem;
  margin-bottom: 20px;
  text-align: center;
}

.resume-button {
  margin: 10px;
  -webkit-appearance: none;
  border: 0;
  outline: 0;
  position: relative;
  background: linear-gradient(
    -45deg,
    #ffd6d6,
    #faffb0,
    #c0ffb6,
    #d0ddff,
    #e1bfff
  );
  background-size: 400% 400%;
  padding: 1.5rem 2rem;
  color: black;
  text-transform: uppercase;
  border-radius: 100px;
  font-size: 1.3rem;
}

.greeting-intro {
  font-size: 5rem;
}

.greeting-details {
  font-size: 1.5rem;
}

.greeting-text {
  font-size: 1rem;
  margin: 50px;
  text-align: center;
}

.greeting-hello {
  font-size: 2.5rem;
}

.greeting-container {
  display: flex;
  justify-content: space-evenly;
  margin: auto;
  padding: 50px;
}

.skills {
  font-size: 1rem;
  text-align: center;
}

.skills-container {
  margin: 100px;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.skills-text {
  font-size: 1.5rem;
}

.skill {
  padding: 20px;
}

.react-img {
  height: auto;
  width: 50%;
  margin: auto;
}

.education-list {
  display: flex;
  list-style: none;
  text-align: center;
}

.education-list-item-container {
  padding: 20px;
  margin: 10px;
  height: 35vh;
  border: white;
  border-style: solid;
  box-shadow: 10px 10px 8px #888888;
  width: 30vw;
  contain: content;
  display: grid;
  place-items: center;
}

.lordicon {
  width: 30%;
  height: 50%;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.experience {
  text-align: center;
}

.experience-title {
  font-size: 1.5rem;
}

.experience-description {
  font-size: 1.25rem;
}

.experience-list-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.bocacode-img {
  padding: 30px;
  height: auto;
  width: 25%;
  margin: auto;
}

.project-section {
  padding: 20px;
  text-align: center;
  display: grid;
  place-items: center;
}

.project-list {
  list-style: none;
  display: grid;
  text-align: center;
  place-items: center;
}

.project-list-item {
  padding: 20px;
  margin: 20px;
  height: 140vh;
  width: 50vw;
  border: white;
  border-style: solid;
  box-shadow: 10px 10px 8px #888888;
  contain: content;
  text-align: center;
}

.project-title {
  font-size: 1.5rem;
}

.project-description {
  padding: 0 1.5rem;
  width: fit-content;
}

.link {
  color: hotpink;
}

.link:hover {
  color: white;
}

.iframe {
  height: 90vh;
  width: 70%;
}

@keyframes typing {
  0% {
    content: "";
  }
  10% {
    content: "C";
  }
  20% {
    content: "Ca";
  }
  30% {
    content: "Cas";
  }
  40% {
    content: "Cass";
  }
  50% {
    content: "Cassa";
  }
  60% {
    content: "Cassan";
  }
  70% {
    content: "Cassand";
  }
  80% {
    content: "Cassandr";
  }
  100% {
    content: "Cassandra";
  }
}

.typewriter {
  --caret: currentcolor;
  font-size: 5rem;
}

.typewriter::before {
  content: "";
  animation: typing 5s infinite;
}

.typewriter::after {
  content: "";
  border-right: 1px solid var(--caret);
  animation: blink 0.5s linear infinite;
}

.typewriter.thick::after {
  border-right: 1ch solid var(--caret);
}

.typewriter.nocaret::after {
  border-right: 0;
}

@media (prefers-reduced-motion) {
  .typewriter::after {
    animation: none;
  }

  @keyframes sequencePopup {
    0%,
    100% {
      content: "Cassandra Curcio";
    }
    25% {
      content: "developer";
    }
    50% {
      content: "developer";
    }
    75% {
      content: "human";
    }
  }

  .typewriter::before {
    content: "developer";
    animation: sequencePopup 12s linear infinite;
  }
}

.contact {
  display: grid;
  place-items: center;
}

.social-container {
  display: flex;
  justify-content: center;
  padding: 20px;
}

.logo-img {
  margin: auto;
  width: 100%;
  height: 100%;
}

.photo-self {
  width: 50%;
  height: auto;
  margin-bottom: 30px;
}

.contact .button {
  height: 60px;
  width: 60px;
  float: left;
  margin: 0 5px;
  overflow: hidden;
  background: #fff;
  border-radius: 50px;
  cursor: pointer;
  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease-out;
}
.contact .button:hover {
  width: 200px;
}
.contact .button .icon {
  display: inline-block;
  height: 60px;
  width: 60px;
  text-align: center;
  border-radius: 50px;
  box-sizing: border-box;
  line-height: 60px;
  transition: all 0.3s ease-out;
}

.contact .button .icon i {
  font-size: 25px;
  line-height: 60px;
}
.contact .button:hover .icon i {
  color: #fff;
}
.contact .button span {
  font-size: 20px;
  font-weight: 500;
  line-height: 60px;
  margin-left: 10px;
}
.contact .button:nth-child(1) span {
  color: #4267b2;
}
.contact .button:nth-child(2) span {
  color: #1da1f2;
}
.contact .button:nth-child(3) span {
  color: #e1306c;
}

@media screen and (max-width: 1000px) {
  section {
    min-height: 20vh;
  }

  .nav-link-container {
    display: flex;
    flex-direction: column;
  }
  .greeting-intro {
    font-size: 1.3rem;
  }
  .greeting-details {
    font-size: 1rem;
  }
  .typewriter {
    --caret: currentcolor;
    font-size: 1.3rem;
  }

  .skills-text {
    font-size: 1rem;
  }

  .education-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    list-style: none;
    text-align: center;
  }

  .education-list-item-container {
    width: 70vw;
  }
  .experience-title {
    font-size: 1rem;
    margin-bottom: 15px;
  }
  .bocacode-img {
    width: 40%;
  }
  .project-list {
    list-style: none;
    display: grid;
    grid-template-rows: 1fr 1fr;
    text-align: center;
    place-items: center;
  }

  .project-list-item {
    padding: 20px;
    margin: 20px;
    height: inherit;
    width: 80vw;
    border: white;
    border-style: solid;
    box-shadow: 10px 10px 8px #888888;
    contain: content;
    text-align: center;
  }

  .iframe {
    display: none;
  }
}

@media only screen and (max-width: 808px) {
}

@media only screen and (max-width: 553px) {
  .header-text {
    margin-top: 10px;
    font-size: 1rem;
  }
}

@media only screen and (max-width: 415px) {
  .skills-container {
    margin: 30px;
  }
}

